force-app/main/default/objects/Counsellor_Information_Mentor__c/Counsellor_Information_Mentor__c.object-meta.xml
<CustomObject>
    <label>Counsellor Information (Mentor)</label>
    <nameField>
        <label>Counsellor Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Counsellor Information (Mentor)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>