force-app/main/default/objects/Counsellor_Information_Mentor__c/fields/Counsellor_Email__c.field-meta.xml
<CustomField>
    <fullName>Counsellor_Email__c</fullName>
    <label>Counsellor Email</label>
    <type>Email</type>
</CustomField>