force-app/main/default/objects/Counsellor_Information_Mentor__c/fields/Counsellor_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Counsellor_Mobile__c</fullName>
    <label>Counsellor Mobile</label>
    <type>Phone</type>
</CustomField>