force-app/main/default/objects/Counsellor_Information_Mentor__c/fields/Counsellor_Title__c.field-meta.xml
<CustomField>
    <fullName>Counsellor_Title__c</fullName>
    <label>Counsellor Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
            <value>
                <fullName>Miss</fullName>
            </value>
            <value>
                <fullName>Dr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>