force-app/main/default/objects/Counsellor_Information_Mentor__c/fields/IsSpeicalized__c.field-meta.xml
<CustomField>
    <fullName>IsSpeicalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSpeicalized</label>
    <type>Checkbox</type>
</CustomField>