force-app/main/default/objects/Counsellor_Information_Mentor__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.IsSpeicalized__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Counsellor Information (Mentor)</relationshipLabel>
    <relationshipName>Counsellor_Information_Mentor</relationshipName>
    <type>Lookup</type>
</CustomField>