force-app/main/default/objects/Counsellor_Information_Mentor__c/fields/Updated_by__c.field-meta.xml
<CustomField>
    <fullName>Updated_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Updated by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Counsellor_Information_Mentor</relationshipName>
    <type>Lookup</type>
</CustomField>