force-app/main/default/objects/Counsellor_Information_Mentor__c/fields/Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Updated_on__c</fullName>
    <label>Updated on</label>
    <type>Date</type>
</CustomField>